--- a/WiX MSI RelInt-GCdD/Product.wxs
+++ b/WiX MSI RelInt-GCdD/Product.wxs
@@ -6,147 +6,185 @@
     <MajorUpgrade DowngradeErrorMessage="O versiune mai noua a produsului [ProductName] este deja instalata." />
     <MediaTemplate EmbedCab="yes" />
 
+
+
+
+
         <!-- 1: Definim structura de directoare -->
         <Directory Id="TARGETDIR" Name="SourceDir">
+          
           <!-- Structura dosare in Program Files 32bit -->
             <Directory Id="ProgramFilesFolder">
-                <Directory Id="SIA_FEEAPF" Name="SIA-FEAA">
-                  <Directory Id="APPLICATIONROOTDIRECTORY" Name="RelInt-GCdD"/>
+                <Directory Id="APPLICATIONROOTDIRECTORY" Name="SIA-FEAA">
+                  <Directory Id="RelInt_GCdDPF" Name="RelInt-GCdD"/>
                 </Directory>
             </Directory>
+          
           <!-- Iconita in START -->
-            <Directory Id="ProgramMenuFolder">
-                <Directory Id="SIA_FEAAPMF" Name="SIA-FEAA">
-                  <Directory Id="ApplicationProgramsFolder" Name="RelInt-GCdD"/>
-                </Directory>
+          <Directory Id="ProgramMenuFolder">
+            <Directory Id="ProgramMenuVendorFolder" Name="SIA-FEAA">
+              <Directory Id="ProgramMenuProductFolder" Name="RelInt-GCdD"/>
             </Directory>
+          </Directory>
+          
           <!-- Iconita pe Desktop -->
-            <Directory Id="DesktopFolder"/>
+            <Directory Id="DesktopFolder" Name="Desktop"/>
+        
         </Directory>
+
+
+
+
 
         <!-- 2: Adaugam fisierele in aplicatie -->
         <DirectoryRef Id="APPLICATIONROOTDIRECTORY">
           <!-- Executabile -->
             <Component Id="RelInt.exe" Guid="D62FA35E-8728-4CBE-B476-9950B42C3E79">
                 <File Id="RelInt.exe" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\RelInt - Gestiune cereri de deplasare.exe" KeyPath="yes" Checksum="yes"/>
+                <RemoveFile Id="RelInt.exe" Name="RelInt.exe" On="uninstall"/>
             </Component>
             <Component Id="RelInt.exe.config" Guid="A6EF52BA-0EF0-489E-96A5-11F32FEBDBF1">
                 <File Id="RelInt.exe.config" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\RelInt - Gestiune cereri de deplasare.exe.config" KeyPath="yes"/>
+                <RemoveFile Id="RelInt.exe.config" Name="RelInt.exe.config" On="uninstall"/>
             </Component>
             <Component Id="RelInt.exe.manifest" Guid="AAE4F273-D9D1-4410-88A2-1FB6B3D7A157">
                 <File Id="RelInt.exe.manifest" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\RelInt - Gestiune cereri de deplasare.exe.manifest" KeyPath="yes"/>
+              <RemoveFile Id="RelInt.exe.manifest" Name="RelInt.exe.manifest" On="uninstall"/>
             </Component>
           <!-- Resurse -->
             <Component Id="RelInt.CRPO.sql" Guid="A0902D73-030A-4AB6-BAAE-7CE7E926F7A0">
                 <File Id="RelInt.CRPO.sql" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\RelIntBD-CRPO.sql" KeyPath="yes"/>
+              <RemoveFile Id="RelInt.CRPO.sql" Name="RelInt.CRPO.sql" On="uninstall"/>
             </Component>
             <Component Id="UAIC_icon.ico" Guid="C98449B2-BC4F-4DB1-9C81-E659CC7155EB">
                 <File Id="UAIC_icon.ico" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\UAIC_icon.ico" KeyPath="yes"/>
+              <RemoveFile Id="UAIC_icon.ico" Name="UAIC_icon.ico" On="uninstall"/>
             </Component>
             <Component Id="UAIC_logo.png" Guid="7B36DBCA-B3C0-49D4-A875-62C45AD73301">
                 <File Id="UAIC_logo.png" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\UAIC_logo.png" KeyPath="yes"/>
+              <RemoveFile Id="UAIC_logo.png" Name="UAIC_logo.png" On="uninstall"/>
             </Component>
             <Component Id="UAIC_logo_bw_1024.png" Guid="2A3B9FE5-7EB2-4153-A8FA-716964375B68">
                 <File Id="UAIC_logo_bw_1024.png" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\UAIC_logo_bw_1024.png" KeyPath="yes"/>
+              <RemoveFile Id="UAIC_logo_bw_1024.png" Name="UAIC_logo_bw_1024.png" On="uninstall"/>
             </Component>
           <Component Id="UAIC_logo_mic.png" Guid="F7A3BC23-8DA2-4055-879D-7E0A23105A12">
             <File Id="UAIC_logo_mic.png" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\UAIC_logo_mic.png" KeyPath="yes"/>
+            <RemoveFile Id="UAIC_logo_mic.png" Name="UAIC_logo_mic.png" On="uninstall"/>
           </Component>
           <Component Id="RelInt_GCdDLicentiere.html" Guid="50D9EF53-F0C9-429F-BE0E-75927386D733">
             <File Id="RelInt_GCdDLicentiere.html" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\RelInt-GCdDLicentiere.html" KeyPath="yes"/>
+            <RemoveFile Id="RelInt_GCdDLicentiere.html" Name="RelInt_GCdDLicentiere.html" On="uninstall"/>
           </Component>
           <Component Id="RelInt_GCdDLicentiere.rtf" Guid="3BC0C1D5-58B5-4760-B638-ADEFB26B9A90">
             <File Id="RelInt_GCdDLicentiere.rtf" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\RelInt-GCdDLicentiere.rtf" KeyPath="yes"/>
+            <RemoveFile Id="RelInt_GCdDLicentiere.rtf" Name="RelInt_GCdDLicentiere.rtf" On="uninstall"/>
           </Component>
           <!-- Biblioteci PDFSharp & Migradoc -->
             <Component Id="PdfSharp.dll" Guid="CBC5305B-0E02-41EE-B71E-46EDB82746D4">
                 <File Id="PdfSharp.dll" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\PdfSharp.dll" KeyPath="yes"/>
+              <RemoveFile Id="PdfSharp.dll" Name="PdfSharp.dll" On="uninstall"/>
             </Component>
             <Component Id="PdfSharp.Charting.dll" Guid="9C52F161-37E9-4BEC-81AB-5C56FF9315EB">
                 <File Id="PdfSharp.Charting.dll" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\PdfSharp.Charting.dll" KeyPath="yes"/>
+              <RemoveFile Id="PdfSharp.Charting.dll" Name="PdfSharp.Charting.dll" On="uninstall"/>
             </Component>
             <Component Id="MigraDoc.RtfRendering.dll" Guid="4FBD9743-02BB-4505-ACF5-99423A60C212">
                 <File Id="MigraDoc.RtfRendering.dll" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\MigraDoc.RtfRendering.dll" KeyPath="yes"/>
+              <RemoveFile Id="MigraDoc.RtfRendering.dll" Name="MigraDoc.RtfRendering.dll" On="uninstall"/>
             </Component>
             <Component Id="MigraDoc.Rendering.dll" Guid="9D711DE6-078C-4A10-A69E-CEF867FEE03C">
                 <File Id="MigraDoc.Rendering.dll" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\MigraDoc.Rendering.dll" KeyPath="yes"/>
+              <RemoveFile Id="MigraDoc.Rendering.dll" Name="MigraDoc.Rendering.dll" On="uninstall"/>
             </Component>
             <Component Id="MigraDoc.DocumentObjectModel.dll" Guid="0CF35F89-C251-47AD-B16A-F392404B1F3C">
                 <File Id="MigraDoc.DocumentObjectModel.dll" Source="D:\RelInt\RelInt - Gestiune cereri de deplasare\bin\x86\Debug\MigraDoc.DocumentObjectModel.dll" KeyPath="yes"/>
+              <RemoveFile Id="MigraDoc.DocumentObjectModel.dll" Name="MigraDoc.DocumentObjectModel.dll" On="uninstall"/>
             </Component>
           <!-- Biblioteci Microsoft -->
             <Component Id="Microsoft.ReportViewer.Common.dll" Guid="A2E871E8-296B-40A4-9272-C502F643F6B5">
                 <File Id="Microsoft.ReportViewer.Common.dll" Source="C:\Windows\assembly\GAC_MSIL\Microsoft.ReportViewer.Common\11.0.0.0__89845dcd8080cc91\Microsoft.ReportViewer.Common.dll" KeyPath="yes"/>
+              <RemoveFile Id="Microsoft.ReportViewer.Common.dll" Name="Microsoft.ReportViewer.Common.dll" On="uninstall"/>
             </Component>
             <Component Id="Microsoft.ReportViewer.WinForms.DLL" Guid="A11372F2-AB09-4BF3-A072-68783C52D2D0">
                 <File Id="Microsoft.ReportViewer.WinForms.DLL" Source="C:\Windows\assembly\GAC_MSIL\Microsoft.ReportViewer.WinForms\11.0.0.0__89845dcd8080cc91\Microsoft.ReportViewer.WinForms.DLL" KeyPath="yes"/>
+              <RemoveFile Id="Microsoft.ReportViewer.WinForms.DLL" Name="Microsoft.ReportViewer.WinForms.DLL" On="uninstall"/>
             </Component>
             <Component Id="Microsoft.SqlServer.Types.dll" Guid="02B8DBCE-A65F-48A3-960F-318060201D96">
                 <File Id="Microsoft.SqlServer.Types.dll" Source="C:\Windows\assembly\GAC_MSIL\Microsoft.SqlServer.Types\11.0.0.0__89845dcd8080cc91\Microsoft.SqlServer.Types.dll" KeyPath="yes"/>
+              <RemoveFile Id="Microsoft.SqlServer.Types.dll" Name="Microsoft.SqlServer.Types.dll" On="uninstall"/>
             </Component>
             <Component Id="Microsoft.ReportViewer.DataVisualization.DLL" Guid="F910E3A1-97D0-408A-9487-3A81F99635A5">
                 <File Id="Microsoft.ReportViewer.DataVisualization.DLL" Source="C:\Windows\assembly\GAC_MSIL\Microsoft.ReportViewer.DataVisualization\11.0.0.0__89845dcd8080cc91\Microsoft.ReportViewer.DataVisualization.DLL" KeyPath="yes"/>
+              <RemoveFile Id="Microsoft.ReportViewer.DataVisualization.DLL" Name="Microsoft.ReportViewer.DataVisualization.DLL" On="uninstall"/>
             </Component>
             <Component Id="Microsoft.ReportViewer.ProcessingObjectModel.DLL" Guid="7030A085-167F-4BE8-B98F-FC93B564BFCA">
                 <File Id="Microsoft.ReportViewer.ProcessingObjectModel.DLL" Source="C:\Windows\assembly\GAC_MSIL\Microsoft.ReportViewer.ProcessingObjectModel\11.0.0.0__89845dcd8080cc91\Microsoft.ReportViewer.ProcessingObjectModel.DLL" KeyPath="yes"/>
+              <RemoveFile Id="Microsoft.ReportViewer.ProcessingObjectModel.DLL" Name="Microsoft.ReportViewer.ProcessingObjectModel.DLL" On="uninstall"/>
             </Component>
         </DirectoryRef>
-    
-        <!-- Cream scurtatura ptr executabil in START -->
-        <DirectoryRef Id="ApplicationProgramsFolder">
-            <Component Id="IconitaRelIntSTART" Guid="865C1AB8-615A-4609-970A-9AF7B0BC72C0">
-              
-                <!-- Scurtatura pentru aplicatie -->
-                <Shortcut Id="ApplicationStartMenuShortcut" 
-                          Name="RelInt-GCdD" 
-                          Description="RelInt - Gestiunea Cererilor de Deplasare"
-                          Target="[#RelInt.exe]"
-                          WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
-              
-                <!-- Scurtatura catre o pagina web a dezvoltatorului -->
+
+
+
+
+
+        <!-- Cream scurtatura in START -->
+        <DirectoryRef Id="ProgramMenuProductFolder">
+          <Component Id="ProgramMenuScurtaturiInSTART" Guid="865C1AB8-615A-4609-970A-9AF7B0BC72C0">
+
+                <!-- Scurtaturi pentru iconite -->
+                <!-- Ptr Executabil -->
+                <Shortcut Id="ApplicationStartMenuShortcut"
+                              Name="RelInt-GCdD"
+                              Description="RelInt - Gestiunea Cererilor de Deplasare"
+                              Target="[#RelInt.exe]"
+                              WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
+                <!-- Ptr Dezvoltator -->
                 <util:InternetShortcut Id="IconitaDezvoltator" Name="Dezolvator" Target="https://www.facebook.com/tkooficial" Type="url"/>
-              
-                <!-- Scurtatura pentru dezinstalarea aplicatiei -->
+                <!-- Ptr Dezinstalare -->
                 <Shortcut Id="DezinstaleazaRelInt"
-                          Name="Dezinstalare RelInt-GCdD"
-                          Description="Dezinstaleaza programul RelInt-GCdD"
-                          Target="[SystemFolder]msiexec.exe"
-                          Arguments="/x [ProductCode]"/>
-              
-                <!-- Stergem dosarul din START -->
-                <!--<RemoveFolder Id="StergeSIA_FEAAPMF" Directory="SIA_FEAAPMF" On="uninstall"/>-->
-                <RemoveFolder Id="StergeApplicationProgramsFolder" Directory="ApplicationProgramsFolder" On="uninstall"/>
+                              Name="Dezinstalare RelInt-GCdD"
+                              Description="Dezinstaleaza programul RelInt-GCdD"
+                              Target="[SystemFolder]msiexec.exe"
+                              Arguments="/x [ProductCode]"/>
             
-           </Component>
+            <!-- Valoare in registru -->
+            <RegistryValue Root="HKCU" Key="Software\Microsoft\SIA-FEAA\RelInt-GCdD" Name="ScurtaturiSTART" Type="integer" Value="1" KeyPath="yes"/>
+            
+            <!-- Instructiuni pentru stergere foldere -->
+            <RemoveFolder Id="RemoveProgramMenuProductFolder" Directory="ProgramMenuProductFolder" On="uninstall" />
+            <RemoveFolder Id="RemoveProgramMenuVendorFolder" Directory="ProgramMenuVendorFolder" On="uninstall" />
+            
+          </Component>
         </DirectoryRef>
-    
+
+
+
+
+
         <!-- Cream scurtatura pe Desktop -->
         <DirectoryRef Id="DesktopFolder">
             <Component Id="IconitaRelIntDesktop" Guid="0F85971D-4C8D-403F-81C6-0F38B246117C">
-                
-                <!-- Iconita catre aplicatie -->
-                <Shortcut Id="ApplicationDesktopShortcut" 
-                          Name="RelInt-GCdD" 
-                          Description="RelInt - Gestiunea Cererilor de Deplasare"
-                          Target="[#RelInt.exe]"
-                          WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
-            
-                <!-- Stergem iconita la dezinstalare -->
-                <RemoveFolder Id="StergeDesktopFolder" Directory="DesktopFolder" On="uninstall"/>
-            
+
+              <!-- Iconita catre aplicatie -->
+              <Shortcut Id="ApplicationDesktopShortcut"
+                        Name="RelInt-GCdD"
+                        Description="RelInt - Gestiunea Cererilor de Deplasare"
+                        Target="[#RelInt.exe]"
+                        WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
+
+              <!-- Valoare in registru -->
+              <RegistryValue Root="HKCU" Key="Software\Microsoft\SIA-FEAA\DesktopFolder" Name="ScurtaturaDESKTOP" Type="integer" Value="1" KeyPath="yes"/>
+
+              <!-- Stergem iconita la dezinstalare -->
+              <RemoveFolder Id="RemoveDesktopFolder" Directory="DesktopFolder" On="uninstall"/>
+
             </Component>
         </DirectoryRef>
-    
-        <!-- Scriem chei in Registru --><!--
-        <DirectoryRef Id="TARGETDIR">
-            <Component Id="RegistruVersiune" Guid="FF912648-274C-423F-BC69-626E75B2245E">
-                <RegistryKey Root="HKLM"
-                             Key="SOFTWARE\SIA-FEAA\RelInt-GCdD\Instalare"
-                             Action="createAndRemoveOnUninstall">
-                  <RegistryValue Name="Versiune" Type="string" Value="1.0.1.19" KeyPath="yes"/>
-                </RegistryKey>
-            </Component>
-        </DirectoryRef>-->
+
+
+
+
 
         <!-- 3: Instalam cele de mai sus -->
         <Feature Id="AplicatiaPrincipala" Title="AplicatiaRelInt" Level="1">
@@ -175,7 +213,8 @@
             <ComponentRef Id="Microsoft.ReportViewer.DataVisualization.DLL"/>
             <ComponentRef Id="Microsoft.ReportViewer.ProcessingObjectModel.DLL"/>
           <!-- Iconite -->
-            <ComponentRef Id="IconitaRelIntSTART"/>
+            <!--<ComponentRef Id ="Dosar_SIA_FEAAPMF"/>-->
+            <ComponentRef Id="ProgramMenuScurtaturiInSTART"/>
             <ComponentRef Id="IconitaRelIntDesktop"/>
           <!-- Scriem in Registru -->
             <!--<ComponentRef Id="RegistruVersiune"/>-->
