--- a/WiX BS RelInt-GCdD/Bundle.wxs
+++ b/WiX BS RelInt-GCdD/Bundle.wxs
@@ -50,22 +50,22 @@
           <ExePackage Id="PostgreSQL94x86" Name="PostgreSQL 9.4.1-3 x86 (32-bit) Full" Cache="no" Compressed="yes" PerMachine="yes" Vital="yes"
                       SourceFile="C:\Program Files (x86)\Microsoft SDKs\Windows\v8.1A\Bootstrapper\Packages\PostgreSQL94\postgresql-9.4.1-3-windows.exe"
                       DetectCondition="NOT VersionNT64 AND (NOT Installed OR Versiune_PostgreSQL94x86 &lt; v9.4.1.15083)"
-                      InstallCondition="VersionNT &gt; v6.0 AND Versiune_PostgreSQL94x86 &lt; v9.4.1.15083" />
+                      InstallCondition="NOT VersionNT64 AND (VersionNT &gt; v6.0 AND Versiune_PostgreSQL94x86 &lt; v9.4.1.15083)" />
 
           <ExePackage Id="PostgreSQL94x64" Name="PostgreSQL 9.4.1-3 x64 (64-bit) Full" Cache="no" Compressed="yes" PerMachine="yes" Vital="yes"
                       SourceFile="C:\Program Files (x86)\Microsoft SDKs\Windows\v8.1A\Bootstrapper\Packages\PostgreSQL94\postgresql-9.4.1-3-windows-x64.exe"
                       DetectCondition="NOT VersionNT AND (NOT Installed OR Versiune_PostgreSQL94x64 &lt; v9.4.1.15083)"
-                      InstallCondition="VersionNT64 &gt; v6.0 AND Versiune_PostgreSQL94x64 &lt; v9.4.1.15083" />
+                      InstallCondition="NOT VersionNT AND (VersionNT64 &gt; v6.0 AND Versiune_PostgreSQL94x64 &lt; v9.4.1.15083)" />
 
           <ExePackage Id="PostgreSQL90x86" Name="PostgreSQL 9.0.19-2 x86 (32-bit) Full" Cache="no" Compressed="yes" PerMachine="yes" Vital="yes"
                       SourceFile="C:\Program Files (x86)\Microsoft SDKs\Windows\v8.1A\Bootstrapper\Packages\PostgreSQL94\postgresql-9.0.19-2-windows.exe"
                       DetectCondition="NOT VersionNT64 AND (NOT Installed OR Versiune_PostgreSQL90x86 &lt; v9.0.19.15083)"
-                      InstallCondition="(VersionNT &gt; v5.1.1 AND VersionNT &lt; v6.0) AND Versiune_PostgreSQL90x86 &lt; v9.0.19.15083" />
+                      InstallCondition="NOT VersionNT64 AND (VersionNT &gt; v5.1.1 AND VersionNT &lt; v6.0) AND Versiune_PostgreSQL90x86 &lt; v9.0.19.15083" />
 
           <ExePackage Id="PostgreSQL90x64" Name="PostgreSQL 9.0.19-2 x64 (64-bit) Full" Cache="no" Compressed="yes" PerMachine="yes" Vital="yes"
                       SourceFile="C:\Program Files (x86)\Microsoft SDKs\Windows\v8.1A\Bootstrapper\Packages\PostgreSQL94\postgresql-9.0.19-2-windows-x64.exe"
                       DetectCondition="NOT VersionNT AND (NOT Installed OR Versiune_PostgreSQL90x64 &lt; v9.0.19.15083)"
-                      InstallCondition="(VersionNT64 &gt; v5.1.1 AND VersionNT64 &lt; v6.0) AND Versiune_PostgreSQL90x64 &lt; v9.0.19.15083" />
+                      InstallCondition="NOT VersionNT AND (VersionNT64 &gt; v5.1.1 AND VersionNT64 &lt; v6.0) AND Versiune_PostgreSQL90x64 &lt; v9.0.19.15083" />
       
           <RollbackBoundary />
 
